# ecb-rate

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
ecb_rate/: cli.py  client.py  custom_types.py  models.py  service.py  utils.py
tests/: test_cli.py  test_client.py  test_custom_types.py  test_models.py  test_service.py  test_utils.py
tests/test_data/: payload.json
