[project]
name = "ecb-rate"
version = "0.3.0"
description = "CLI for ECB JSON exchange rates"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "pydantic>=2.12.5",
]

[project.scripts]
ecb_rate = "ecb_rate.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8-pyproject>=1.2.4",
    "isort>=8.0.1",
    "pylint>=4.0.5",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
